<resources>
    <string name="app_name">DeltaCalc</string>

    <string name="dig_0">0</string>
    <string name="dig_1">1</string>
    <string name="dig_2">2</string>
    <string name="dig_3">3</string>
    <string name="dig_4">4</string>
    <string name="dig_5">5</string>
    <string name="dig_6">6</string>
    <string name="dig_7">7</string>
    <string name="dig_8">8</string>
    <string name="dig_9">9</string>

    <string name="del">DEL</string>
    <string name="clr">CLR</string>

    <string name="op_sum">+</string>
    <string name="op_sub">-</string>
    <string name="op_mul">×</string>
    <string name="op_div">÷</string>
    <string name="op_exp">^</string>

    <string name="dec_point">·</string>

    <string name="l_par">(</string>
    <string name="r_par">)</string>

    <string name="eq">=</string>

    <string name="display_formula_hint">FORMULA</string>
    <string name="display_result_hint">RESULT</string>

    <string name="mem_tries">0</string>

    <string name="nav_calc">Calculator</string>
    <string name="nav_music">Music</string>
    <string name="nav_sound">SoundBoard</string>
    <string name="nav_memory">Memory</string>
    <string name="nav_ranking">Ranking</string>
    <string name="nav_settings">Settings</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_not_snack">Snackbar</string>
    <string name="nav_not_toast">Toast</string>
    <string name="nav_not_state">State</string>
    <string name="nav_mem_reset_game">Reset game</string>
    <string name="nav_rank_reset_db">Reset ranking</string>
</resources>
