<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:divider="@drawable/divider_vertical"
    android:showDividers="middle">

    <group
        android:id="@+id/group_features"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calc"
            android:icon="@drawable/ic_calculator"
            android:title="@string/nav_calc"
            android:checked="true"/>

        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_headset"
            android:title="@string/nav_music"/>

    </group>

    <group
        android:id="@+id/group_settings">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings"/>

    </group>

</menu>